@@ -8,10 +8,9 @@ program.
 
 === Armored components stuff ===
 
-Merlin MLN-SX (Boondocks) -- armored components (engine)
 Devastator DVS-X10 Muse Earth (Davion) -- armored components (supercharger)
 Beowulf BEO-X-7a (Comstar) -- armored components (gear)
-Great Turtle GTR-2 (3055) -- armored components (engine, gear, torso cockpit)
+Great Turtle GTR-2 (3055) -- armored components (gear, torso cockpit)
 
 === Issues with SSW ===
 
