@@ -1,3 +1,7 @@
+2012-10-28  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added support for armored engines.
+
 2012-08-24  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Added electronics listing.
